Fix laggy animations on Firefox and Safari (#79)
* Fix laggy animations on Firefox and Safari

* Fix parallax

--- a/assets/scss/theme/_frontend.scss
+++ b/assets/scss/theme/_frontend.scss
@@ -31,3 +31,11 @@
 .entry-meta a:hover {
     text-decoration-color: var(--current-color-primary);
 }
+
+.site-content {
+    backface-visibility: hidden;
+
+    .blog & {
+        will-change: transform;
+    }
+}
